[gd_scene load_steps=9 format=3 uid="uid://b8jvr0cdswbuq"]

[ext_resource type="Script" path="res://Scripts/phone_call.gd" id="1_hry82"]
[ext_resource type="AudioStream" uid="uid://dwh8d5fmvxru" path="res://Assets/Sounds/Phone Ringing.mp3" id="2_nltei"]
[ext_resource type="AudioStream" uid="uid://bvif2h75t6udl" path="res://Assets/Sounds/NightTwoPhoneCall.mp3" id="2_nw5vr"]
[ext_resource type="AudioStream" uid="uid://ci42lx0l0ycx7" path="res://Assets/Sounds/NightOnePhoneCall.mp3" id="3_10nle"]
[ext_resource type="AudioStream" uid="uid://bqcatfn2g8beu" path="res://Assets/Sounds/pickingupthephone.mp3" id="4_nltei"]
[ext_resource type="AudioStream" uid="uid://vl4xyan23kl" path="res://Assets/Sounds/NightThreePhoneCall.mp3" id="6_vri7v"]
[ext_resource type="AudioStream" uid="uid://c0w6yo3ast6b3" path="res://Assets/Sounds/NightFourPhoneCall.mp3" id="7_hx85m"]
[ext_resource type="AudioStream" uid="uid://c3crhsj5tldcc" path="res://Assets/Sounds/NightFivePhoneCall.mp3" id="8_7qb8a"]

[node name="PhoneCall" type="Node2D"]
script = ExtResource("1_hry82")

[node name="NightTwoPhoneCall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_nw5vr")

[node name="PhoneRinging" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_nltei")

[node name="NightOnePhoneCall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_10nle")

[node name="Transition" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_nltei")

[node name="NightThreePhoneCall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_vri7v")

[node name="NightFourPhoneCall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_hx85m")

[node name="NightFivePhoneCall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_7qb8a")
